--- a/LaptopFinderAPI/appsettings.json
+++ b/LaptopFinderAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MongoDB": "mongodb://localhost:27017/mydb"
+    "MongoDB": "mongodb+srv://ISWD:<pass>@iswd.tpountx.mongodb.net/?retryWrites=true&w=majority"
   },
   "AllowedHosts": "*"
 }
